# pomaicache

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  perf-nightly.yml
apps/cli/: main.cpp
bench/: ai_artifact_bench.cpp  pomai_cache_bench.cpp  pomai_cache_netbench.cpp  pomai_cache_replay.cpp
config/: policy_params.json
docker/: Dockerfile  docker-compose.yml
docs/: AI_CACHE.md  AI_COMMANDS.md  ARCHITECTURE.md  BENCHMARKING.md  BENCH_TIERING.md  BLOB_DEDUP.md  CANARY_ROLLOUT.md  CRASH_SEMANTICS.md  INVALIDATION.md  PERF_TOOLING.md  SOAK_CHAOS.md  SSD_FORMAT.md  TESTING.md  TIERING.md  TRACING.md
include/pomai_cache/: ai_cache.hpp  engine.hpp  policy.hpp  resp.hpp  ssd_store.hpp  types.hpp
scripts/: bench_run.sh
scripts/perf/: asan_build.sh  flamegraph.sh  heap_profile.md  perf_record.sh  tsan_build.sh
src/engine/: engine.cpp  ssd_store.cpp
src/metrics/: info_metrics.cpp
src/policy/: policies.cpp
src/server/: ai_cache.cpp  resp.cpp  server_main.cpp
src/util/: time.cpp
tests/: crash_harness.cpp  test_ai_cache.cpp  test_canary.cpp  test_chaos.cpp  test_engine.cpp  test_integration.cpp  test_resp.cpp
tests/soak/: pomai_cache_soak.py
tools/: redis_bench_compat
traces/: mini_hotset.trace  ttlheavy.trace
tuner/: tune_policy.py
